// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavButton /> should handle "vertical" and "type" props 1`] = `
<NavButton
  type="forward"
  vertical={false}
>
  <button
    aria-label="вперед"
    className="carousel-control forward"
    type="button"
  >
    <RightSVG
      fill="currentColor"
      role="presentation"
    >
      <svg
        fill="currentColor"
        height={16}
        role="presentation"
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          clipRule="evenodd"
          d="M6.341 12.753a1 1 0 01-.094-1.412L9.171 8 6.247 4.659a1 1 0 011.506-1.317l3.5 4a1 1 0 010 1.317l-3.5 4a1 1 0 01-1.412.094z"
          fillRule="evenodd"
        />
      </svg>
    </RightSVG>
  </button>
</NavButton>
`;

exports[`<NavButton /> should handle "vertical" and "type" props 2`] = `
<NavButton
  type="backward"
  vertical={false}
>
  <button
    aria-label="назад"
    className="carousel-control backward"
    type="button"
  >
    <LeftSVG
      fill="currentColor"
      role="presentation"
    >
      <svg
        fill="currentColor"
        height={16}
        role="presentation"
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          clipRule="evenodd"
          d="M9.659 3.247a1 1 0 01.094 1.412L6.829 8l2.924 3.341a1 1 0 01-1.506 1.318l-3.5-4a1 1 0 010-1.317l3.5-4a1 1 0 011.412-.095z"
          fillRule="evenodd"
        />
      </svg>
    </LeftSVG>
  </button>
</NavButton>
`;

exports[`<NavButton /> should handle "vertical" and "type" props 3`] = `
<NavButton
  type="forward"
  vertical={true}
>
  <button
    aria-label="вперед"
    className="carousel-control vertical forward"
    type="button"
  >
    <DownSVG
      fill="currentColor"
      role="presentation"
    >
      <svg
        fill="currentColor"
        height={16}
        role="presentation"
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          clipRule="evenodd"
          d="M3.247 6.342a1 1 0 011.412-.095L8 9.171l3.341-2.924a1 1 0 011.318 1.506l-4 3.5a1 1 0 01-1.317 0l-4-3.5a1 1 0 01-.095-1.411z"
          fillRule="evenodd"
        />
      </svg>
    </DownSVG>
  </button>
</NavButton>
`;

exports[`<NavButton /> should handle "vertical" and "type" props 4`] = `
<NavButton
  type="backward"
  vertical={true}
>
  <button
    aria-label="назад"
    className="carousel-control vertical backward"
    type="button"
  >
    <UpSVG
      fill="currentColor"
      role="presentation"
    >
      <svg
        fill="currentColor"
        height={16}
        role="presentation"
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          clipRule="evenodd"
          d="M12.753 9.659a1 1 0 01-1.412.094L8 6.829 4.659 9.753a1 1 0 01-1.317-1.506l4-3.5a1 1 0 011.317 0l4 3.5a1 1 0 01.094 1.412z"
          fillRule="evenodd"
        />
      </svg>
    </UpSVG>
  </button>
</NavButton>
`;
